results/SVCOMP/specgen/log-StringBuilderChars05-2024_03_01_07_06_11.txt
public class StringBuilderChars05 {
    //@ requires arg != null;
    //@ ensures \result ==> buffer.toString().equals("HiffBllTe Limited");
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        buffer.setCharAt(0, 'H');
        buffer.setCharAt(6, 'T');
        return buffer.toString().equals("HiffBllTe Limited");
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:3: error: cannot find symbol
    //@ ensures \result ==> buffer.toString().equals("HiffBllTe Limited");
                            ^
  symbol:   variable buffer
  location: class StringBuilderChars05
1 error

public class StringBuilderChars05 {
    //@ requires arg != null;
    //@ ensures \result ==> \result == buffer.toString().equals("HiffBllTe Limited");
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        buffer.setCharAt(0, 'H');
        buffer.setCharAt(6, 'T');
        return buffer.toString().equals("HiffBllTe Limited");
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:3: error: cannot find symbol
    //@ ensures \result ==> \result == buffer.toString().equals("HiffBllTe Limited");
                                       ^
  symbol:   variable buffer
  location: class StringBuilderChars05
1 error

public class StringBuilderChars05 {
    //@ requires arg != null;
    //@ ensures \result ==> \result == (new StringBuilder(arg).setCharAt(0, 'H').setCharAt(6, 'T').toString().equals("HiffBllTe Limited"));
    public static boolean f(String arg) {
        return (new StringBuilder(arg).setCharAt(0, 'H').setCharAt(6, 'T').toString().equals("HiffBllTe Limited"));
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> \result == (new StringBuilder(arg).setCharAt(0, 'H').setCharAt(6, 'T').toString().equals("HiffBllTe Limited"));
                                        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:3: error: void cannot be dereferenced
    //@ ensures \result ==> \result == (new StringBuilder(arg).setCharAt(0, 'H').setCharAt(6, 'T').toString().equals("HiffBllTe Limited"));
                                                                                ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:5: error: void cannot be dereferenced
        return (new StringBuilder(arg).setCharAt(0, 'H').setCharAt(6, 'T').toString().equals("HiffBllTe Limited"));
                                                        ^
3 errors

public class StringBuilderChars05 {
    //@ requires arg != null;
    //@ ensures \result ==> \result == (fHelper(arg).equals("HiffBllTe Limited"));
    public static boolean f(String arg) {
        return fHelper(arg).equals("HiffBllTe Limited");
    }

    //@ requires arg != null;
    //@ ensures \result != null;
    public static String fHelper(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        buffer.setCharAt(0, 'H');
        buffer.setCharAt(6, 'T');
        return buffer.toString();
    }
}
